<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
  >

    <PreferenceCategory
        app:key="notifications_category"
        app:title="@string/title_notifications">

        <SwitchPreferenceCompat
            app:key="practice_notifications"
            app:title="@string/enable_practice_notifications"/>
        <EditTextPreference
            android:dialogTitle="Type in your daily practice goal"
            app:key="practice_notifications_time"
            app:title="@string/notification_time"
            app:useSimpleSummaryProvider="true"
            android:defaultValue="@string/notification_time_5min"
            />
        <SwitchPreferenceCompat
            app:key="posture_notifications"
            app:title="@string/enable_posture_notifications"/>
        <EditTextPreference
            android:dialogTitle="@string/ingresa_el_tiempo_de_recordatorio_de_postura"
            app:key="posture_notifications_time"
            app:title="@string/notification_time"
            app:useSimpleSummaryProvider="true"
            android:defaultValue="@string/notification_time_2min"
            />
    </PreferenceCategory>
    <PreferenceCategory
        app:key="tuner_category"
        app:title="@string/afinador">
        <DropDownPreference
            android:key="tuner_default"
            android:title="@string/afinacion_por_defecto"
            app:useSimpleSummaryProvider="true"
            />
        <SeekBarPreference
            android:key="tuner_sensibility"
            android:title="@string/sensibilidad_del_microfono"
            app:useSimpleSummaryProvider="true"
            android:max="100"
            android:defaultValue="100"
            app:summary="@string/resumen_sensibilidad_mic"
            />
    </PreferenceCategory>
    <PreferenceCategory
        app:key="microphone_category"
        app:title="@string/microfono">
        <SeekBarPreference
            app:key="microphone_gain"
            android:title="@string/ganancia_del_microfono"
            app:useSimpleSummaryProvider="true"
            android:max="30"
            android:defaultValue="10"/>
    </PreferenceCategory>
    <PreferenceCategory
        app:key="language_category"
        app:title="@string/lenguaje">
        <Preference
            app:key="change_language"
            android:title="@string/lenguajes_disponibles"
            app:summary="@string/espa_ol_ingles"
            />
    </PreferenceCategory>
    <PreferenceCategory
        app:key="sign_category"
        app:title="@string/cuenta"
        >
        <Preference
            app:key="sign_out"
            android:title="@string/log_out"
            app:summary="@string/click_to_logout"
            />
        <Preference
            app:key="sign_in"
            android:title="@string/log_in"
            app:summary="@string/click_to_login"
            />
    </PreferenceCategory>

</PreferenceScreen>