<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_ejercicios"
        android:icon="@drawable/logo_guitar_traina_pua"
        android:title="@string/ejercicios" />

    <item
        android:id="@+id/navigation_entrenador_de_bends"
        android:icon="@drawable/ic_guitar_neck"
        android:title="@string/entrenador_de_bends" />

    <item
        android:id="@+id/navigation_metronomo"
        android:icon="@drawable/ic_baseline_av_timer_24"
        android:title="@string/metronomo" />
    <item
        android:id="@+id/navigation_sesion_grupal"
        android:icon="@drawable/ic_baseline_group_24"
        android:title="@string/sesion_grupal" />
    <item
        android:id="@+id/navigation_entrenador_de_oido"
        android:icon="@drawable/ic_baseline_hearing_24"
        android:title="@string/entrenador_de_oido" />

    <item
        android:id="@+id/navigation_detective_de_ritmo"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/detective_de_ritmo" />
    <item
        android:id="@+id/navigation_rythm_looper"
        android:icon="@drawable/baseline_loop_24"
        android:title="@string/rhythm_looper" />
    <item
        android:id="@+id/navigation_chord_library"
        android:icon="@drawable/diagrama_de_acordes"
        android:title="@string/chord_library" />
    <item
        android:id="@+id/navigation_progreso"
        android:icon="@drawable/ic_baseline_bar_chart_24"
        android:title="@string/progreso" />
    <item
        android:id="@+id/notifications"
        android:icon="@drawable/baseline_notifications_24"
        android:title="@string/notifications" />
    <item
        android:id="@+id/navigation_ranking"
        android:icon="@drawable/ic_baseline_star_rate_24"
        android:title="@string/clasificados" />
    <item
        android:id="@+id/navigation_unranked"
        android:icon="@android:drawable/star_off"
        android:title="@string/sin_clasificar" />
    <item
        android:id="@+id/navigation_reportar_errores"
        android:icon="@drawable/ic_baseline_bug_report_24"
        android:title="@string/reportar_errores" />
</menu>