<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:text="@string/reportar_errores"
            android:textAlignment="center"
            android:textSize="34sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextBugTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:hint="@string/ingresa_el_titulo_del_error_ej_la_configuracion_no_se_guarda"
                android:inputType="text"
                android:maxLength="100"
                app:errorEnabled="true"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextErrorNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:hint="@string/ingresa_el_numero_de_veces_que_ocurrio_el_error"
                android:inputType="number"
                android:maxLength="3"
                app:errorEnabled="true"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextBugSteps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:hint="@string/ingresa_los_pasos_para_reproducir_el_problema_ej_en_el_afinador_intentar_crear_una_afinacion"
                android:lines="8"
                android:maxLines="10"
                android:gravity="start"
                android:inputType="textMultiLine"
                android:maxLength="1000"
                app:errorEnabled="true"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextBugDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:hint="@string/ingresa_la_descripcion_del_problema"
                android:lines="10"
                android:maxLines="20"
                android:gravity="start"
                android:inputType="textMultiLine"
                android:maxLength="3000"
                app:errorEnabled="true"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="10dp"
            android:text="@string/enviar_reporte" />
    </LinearLayout>
</ScrollView>
